:tada: initial commit

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App{
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* backdrop-filter: blur(100em); */
+  background-color: #116466;
+}
+
+.Searsh_item{
+  margin: 20px 0;
+}
+.search_text{
+  color: #d9b08c
+}
+
+.Searsh_item{
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 20px;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.App-container{
+  display: flex;
+  padding: 20px 40px;
+  gap: 20px;
+  flex-wrap: wrap;
+  justify-content: center;
 }
