many tasks completed

--- a/src/pages/main/Content/components/SearchBar/SearchBar.css
+++ b/src/pages/main/Content/components/SearchBar/SearchBar.css
@@ -6,5 +6,11 @@
     border: 1px solid black;
     border-radius: 0;
     outline: none;
-    height: 20px;
+    /* height: 40px; */
+}
+
+.input_item{
+    width: 400px;
+    height: 30px;
+    border-radius: 10px
 }
