--- a/src/pages/main/Content/NewCard/NewCards.css
+++ b/src/pages/main/Content/NewCard/NewCards.css
@@ -1,8 +1,4 @@
-*{
-    box-sizing: border-box;
-}
-
-.Card{
+.Card_new{
     width: 200px;
     box-shadow: 1px 1px 10px 4px #ccc;
     border-radius: 15px;
@@ -13,15 +9,16 @@
     flex-direction: column;
     align-items: center;
     background-color: aliceblue;
+    cursor: pointer;
 }
 
-.Card-container{
+.Card-container_new{
     display: flex;
     flex-direction: column;
     background-color: #d1e8e2;
 }
 
-.Card-img{
+.Card-img_new{
     width: 10em;
     height: 10em;
     /* поменять перед оффом */
@@ -32,7 +29,7 @@
     padding: 5px;
 }
 
-.Card-title{
+.Card-title_new{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -46,22 +43,21 @@
     font-family: fantasy;
 }
 
-.Card-discription{
+.Card-discription_new{
     -webkit-line-clamp: 3;
-    -webkit-box-orient: vertical;
     padding: 0 10px;
     display: -webkit-box;
-    overflow: hidden;
     text-overflow: ellipsis;
 }
 
-.Card-price{
+
+.Card-price_new{
     display: flex;
     justify-content: center;
     padding-bottom: 10px;
     font-weight: bolder;
 }
 
-.Card-button{
+.Card-button_new{
     margin-top: auto;
 }
