--- a/src/pages/main/Content/components/Button/Button.css
+++ b/src/pages/main/Content/components/Button/Button.css
@@ -7,8 +7,21 @@
     font-weight: bold;
     text-transform: uppercase;
     cursor: pointer;
+    
 }
 
 .CommonButton:hover{
     background-color: rgba(black, 0.7);
+
+}
+
+.New_Content{
+    display: flex;
+    flex-direction: column;
+    /* backdrop-filter: blur(100em); */
+    background-color: #ffcb9a;
+    margin: auto;
+    justify-content: center;
+    margin: 0 auto;
+    align-items: center
 }
